--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,12 +389,11 @@ body:hover::-webkit-scrollbar-thumb { background-color: var(--surface-variant); 
   font-size: 1.8rem;
   line-height: 1.6;
   margin-top: 20px;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: var(--radius-12);
   color: var(--on-background);
   max-height: 400px;
   overflow-y: auto;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
 }
 
 
